fix: increase z-index and remove background image

--- a/src/components/Home/Entrada.module.css
+++ b/src/components/Home/Entrada.module.css
@@ -1,7 +1,9 @@
+
 .entrada {
   min-height: calc(100vh - 6rem);
   display: flex;
   align-items: center;
+  /* background-image: url("../../assets/enf2.svg"); */
   background-position: bottom left;
   background-repeat: no-repeat;
   background-size: 20rem;
@@ -82,7 +84,7 @@
   flex-direction: column;
   align-items: flex-start;
   position: relative;
-  z-index: 1;
+  z-index: 999;
 }
 
 .logoContainer {
